Fix issue causing active facet list to collapse when active facets
code refactor

--- a/ckanext/faoclh/public/base/css/main.css
+++ b/ckanext/faoclh/public/base/css/main.css
@@ -11368,6 +11368,12 @@ h5 {
 
 .module-shallow {
     cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 
 .module-shallow nav {
